--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
 tokio = { version = "1.44.2", features = ["full"] }
+tower-http = { version = "0.6.2", features = ["trace"] }
+tracing = "0.1.41"
 uuid = { version = "1.16.0", features = ["v4"] }
 
