--- a/compose.yml
+++ b/compose.yml
@@ -15,5 +15,27 @@ services:
       - ENV
       - PORT
       - RUST_LOG
+      - DATABASE_URL
     tty: true
     stdin_open: true
+    depends_on:
+      - pg-db
+  pg-db:
+    container_name: rust-db
+    build:
+      context: .
+      dockerfile: ./docker/local/db/Dockerfile
+    environment:
+      - POSTGRES_DB=pg-db
+      - POSTGRES_USER=pg-user
+      - POSTGRES_PASSWORD=pg-password
+      - POSTGRES_INITDB_ARGS=--locale=ja_JP.utf8
+      - TZ=Asia/Tokyo
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./docker/local/db/init:/docker-entrypoint-initdb.d
+      - pg-db-data:/var/lib/postgresql/data
+volumes:
+  pg-db-data:
+    driver: local
