--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 ENV=local
 PORT=8080
 RUST_LOG=info
-DATABASE_URL="postgres://pg-user:pg-password@pg-db:5432/pg-db?sslmode=disable"
+DATABASE_URL=postgres://pg-user:pg-password@pg-db:5432/pg-db?sslmode=disable
