--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 ENV=production
 PORT=8080
 RUST_LOG=info
-DATABASE_URL="postgres://pg-user:pg-password@host.docker.internal:5432/pg-db?sslmode=disable"
+DATABASE_URL=postgres://pg-user:pg-password@host.docker.internal:5432/pg-db
