--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 ENV=local
 PORT=8080
 RUST_LOG=info
+ALLOW_ORIGIN=http://localhost:3000
 DATABASE_URL=postgres://pg-user:pg-password@pg-db:5432/pg-db?sslmode=disable
