--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 ENV=production
 PORT=8080
 RUST_LOG=info
+ALLOW_ORIGIN=http://localhost
+DATABASE_URL=postgres://pg-user:pg-password@host.docker.internal:5432/pg-db
