--- a/compose.yml
+++ b/compose.yml
@@ -9,12 +9,12 @@ services:
       - .:/app
     ports:
       - "8080:8080"
-    env_file: 
-      - ./.env
+    # .env.testing利用時に上書きしたい環境変数を設定する
     environment:
       - ENV
       - PORT
       - RUST_LOG
+      - ALLOW_ORIGIN
       - DATABASE_URL
     tty: true
     stdin_open: true
