--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,5 @@
 ENV=testing
 PORT=8080
 RUST_LOG=info
+ALLOW_ORIGIN=http://localhost:3000
 DATABASE_URL=postgres://testuser:test-password@pg-db:5432/testdb?sslmode=disable
